manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akshome-f3b0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akshome-f3b0"
  template:
    metadata:
      labels:
        app: "akshome-f3b0"
    spec:
      containers:
        - name: "akshome-f3b0"
          image: "discordtemp.azurecr.io/akshome"
          ports:
          - containerPort: 8080
